Integrated PocketSphinx into app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,3 +33,7 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
 }
+
+ant.importBuild 'assets.xml'
+preBuild.dependsOn(list, checksum)
+clean.dependsOn(clean_assets)
